# internShalaProject

./: README.md
Jobyaari_Assignment/: .env  QUICKSTART.md  README.md  __init__.py  agents.py  getFullVideo.py  getScript.py  getVideo.py  getVoice.py  imortant_information.txt  runner.py  temp_temp.py
Jobyaari_Assignment/SendToGoogle/: client_secrets.json  credentials.json  scrapeData.py  sendorUpdate.py
Jobyaari_Assignment/SendToGoogle/__pycache__/: client_secrets.json  quantum-toolbox-446207-v3-a291551572f4.json
Jobyaari_Assignment/SendToSheet/: scrapeData.py  sendorUpdate.py  settings.yaml  temp.ipynb  temp.py
Yardstick_Assignment/: README.md  Task1.py  Yardstick_Assignment.ipynb  __init__.py  getFunctionCallling.py  getResponse.py
Yardstick_Assignment/TASK1/: getResponse.py
Yardstick_Assignment/TASK2/: README.md
multiagent/: README.md  crew.py  pyproject.toml  report.md
multiagent/config/: agents.yaml  tasks.yaml
multiagent/src/: TSLA_daily_briefing.md  TSLA_daily_briefing_revised.md  cpu_usage.txt  dow_jones_daily_debrief.md  important_document.txt  report.md
multiagent/src/multiagent/: crew.py  main.py
multiagent/src/multiagent/config/: agents.yaml  tasks.yaml
multiagent/src/multiagent/tools/: custom_tool.py
multiagent/tools/: custom_tool.py
